[workspace]

[package]
authors = []
edition = "2021"
name = "deno-kv-napi"
version = "0.0.0"     # never published

[lib]
crate-type = ["cdylib"]

[dependencies]
futures.workspace = true
napi.workspace = true
napi-derive.workspace = true
denokv_sqlite = { path = "../../sqlite" }
denokv_proto = { path = "../../proto" }
libsql-rusqlite.workspace = true
rand.workspace = true
rand_distr.workspace = true
tokio.workspace = true
anyhow.workspace = true
prost.workspace = true
once_cell.workspace = true
deno_error.workspace = true

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true

[lints.rust]
warnings = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"
